# Harness2

./: .gitignore  .ignore  CLAUDE.md  EXCLUSIONS.md  EXCLUSIONS.sha256.txt  HANDOFF.md  LICENSE  PDR.md  README.md
.githooks/: pre-commit
.github/workflows/: harnessgates.yml
baseline/: GATE6-SESSION.md  test-output-v1.txt
baseline/endpoints-v1/: agent-422.json  debug-mcp.code-default.json  debug-mcp.deployed.json  healthz.deployed.json
baseline/endpoints-v2/: debug-mcp.deployed-roster.json  healthz.deployed-roster.json
baseline/schemas-v1/: fork-report-schema.json  harness-branch-result-schema.json  harness-fork-report-sample.json  harness-fork-report-schema.json  history-schema.json  mcp-config.json  settings-flag-rules.json  settings.json  workspace-layout.json
baseline/sse-v1/: README.md
baseline/sse-v2/: README.md  chat-roundtrip.sse  interrupt-approve.sse  interrupt-deny.sse  mcp-discovery.sse  restart-resume.sse  todo-render.sse
baseline/traces-v1/: README.md
baseline/traces-v2/: README.md  gate6-trace-summaries.json
catalogs/: models.yml  scaffolds.yml  tools.yml
docs/: HarnessCritique.md  HarnessRefactor.md  ISSUES.md  PLAN-agent-web-startup.md  RUNBOOK-smoke.md
docs/adr/: 0001-windows-native-workspace.md  0002-pydantic-deepagents-harness.md  0003-provider-flexible-inference.md  0004-durable-memory-pgvector.md  0005-planner-generators-critics.md  0006-pydantic-graph-orchestration.md  0007-keep-deep-agent-harness.md  0008-wheel-reinvention-audit.md  0009-observability-logfire.md  0010-fork-based-plan-viability.md  0011-harness-native-forking.md  0012-ag-ui-web-frontend-pivot.md  0013-copilotkit-react-frontend.md  0014-mcp-server-wiring.md  0015-full-harness-feature-enablement.md  0016-copilotkit-oss-only-enterprise-later.md  0017-selection-failure-policy.md  0018-fork-selection-metric.md  0019-checkpoint-persistence-scope.md  0020-composed-security-posture.md  0021-legacy-strata-disposition.md  0022-workspace-coherence.md  0023-manual-thread-persistence.md  README.md
evals/agentic-smoke/: README.md  pyproject.toml
evals/agentic-smoke/tests/: test_math_smoke.py  test_pip_hook.py  test_pydantic_ai_smoke.py  test_workspace_coherence.py
infra/: README.md  docker-compose.gpu.yml  docker-compose.yml
infra/initdb/: 01_init.sql  02_dedup.sql
infra/sandbox/: Dockerfile
parity/: _env.py  ast_equal.py  capture_baseline.py  conftest.py  doc_grep.py  dup-allowlist.yml  dup_scan.py  findings-catalog.yml  import_lint.py  layer-rules.yml  lint_manifest.py  manifest.yml  test_matrix_a_settings.py  test_matrix_cd_endpoints.py
projects/agent-web/: .env.example  CLAUDE.md  README.md  mcp.json  pyproject.toml
projects/agent-web/context/: AGENTS.md  MEMORY.md
projects/agent-web/frontend/: index.html  package-lock.json  package.json  vite.config.ts
projects/agent-web/frontend/src/: App.tsx  persistence.tsx
projects/agent-web/scripts/: Create-DesktopShortcut.ps1  Register-StartupTask.ps1  Start-AgentWeb.ps1  build-frontend.ps1  dev_server_testmodel.py
projects/agent-web/skills/: README.md
projects/agent-web/skills/external-services/: SKILL.md
projects/agent-web/src/agent_web/: __init__.py  agent.py  app.py  deps.py  history.py  improve_run.py  main.py  mcp.py  observability.py  settings.py  threads.py
projects/agent-web/state/checkpoints/gate6-int-appr/: 95ebc27d-183e-41ac-869d-569d0a79ab3e.json
projects/agent-web/state/checkpoints/gate6-mcp/: 284e993b-a4ec-47dd-8768-30fd0de7d744.json  66550c31-caa6-48d4-9511-f78682047f6d.json
projects/agent-web/state/checkpoints/gate6-todo/: d22a0206-a9f2-4e71-9657-a4a2ceeda8c4.json
projects/agent-web/state/history/: gate6-chat.json  gate6-int-appr.json  gate6-int-deny.json  gate6-mcp.json  gate6-todo.json  phase4-smoke.json  phase5-retry.json
projects/agent-web/tests/: conftest.py  helpers.py  test_agent_build.py  test_checkpoints.py  test_context_management.py  test_deps_factory.py  test_e2e_agui.py  test_e2e_interrupts.py  test_improve_run.py  test_interrupt_rehydrate.py  test_mcp_wiring.py  test_run_survival.py  test_security_posture.py  test_settings_flags.py  test_threads_api.py
projects/eval-optimizer/: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
projects/eval-optimizer/docs/: AGENTICWORK_HARNESS_CRITIQUE.md  C5_FAILURE_DIAGNOSIS.md  C5_FORK_PLAN.md  FOUNDATION_PLAN.md  HARNESS_FIX_PLAN.md
projects/eval-optimizer/docs/adr/: README.md
projects/eval-optimizer/skills/: README.md
projects/eval-optimizer/src/eval_optimizer/: __init__.py  agents.py  artifacts.py  check_connection.py  config.py  fork_check.py  forking.py  generator_check.py  graph.py  graph_check.py  loop.py  memory_check.py  memory_pg.py  models.py  observability.py  planner_check.py  schema.py  validate.py
projects/eval-optimizer/src/eval_optimizer/legacy/: __init__.py  agents.py  generator_check.py  graph_check.py  loop.py  planner_check.py  runtime.py  schema.py  validate.py  validate_check.py
projects/eval-optimizer/tests/: conftest.py  test_forking.py  test_models.py  test_parity_matrix_b.py  test_retry_transport.py  test_smoke.py  test_validate.py
rules/: python-env-policy.md
rules/hooks/: agentic_pre_tool_use.py
scripts/: Register-ImproveTask.ps1
