[project]
name = "agentic-smoke"
version = "0.1.0"
description = "Workspace-policy smoke tests: the AgenticWork policy layer, enforced (ADR-0022)."
readme = "README.md"
# One workspace floor (ADR-0022); root .python-version pins the interpreter.
requires-python = ">=3.12"
dependencies = [
    "hypothesis",
    "numpy",
    "pydantic-ai",
    "pydantic-evals",
    "pytest",
    "pyyaml",
    "scipy",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
